src/App.css
/* ... */
.skill h2 {
  font-size: 45px;
  font-weight: 700;
}
.skill p {
  color: #B8B888;
  font-size: 20px;
  letter-spacing: 0.8px;
  line-height: 1.5em;
  margin: 14px 0 75px 0;
}
.skill-slider {
  width: 80%;
  margin: 0 auto;
  position: relative;
}

.skills-slider .item img {
  width: 50%;
  margin: 0 auto 15px auto;
}

.background-image-L {
  top: 28%;
  position: absolute;
  bottom: 0;
  width: 40%;
  z-index: -4;
  left: 0;
}

/************ Projects Css ************/
.project {
  padding: 80px 0;
  position: relative;
  background-color: rgba(0, 0, 0, 0);
}
.project h2 {
	font-size: 45px;
	font-weight: 700;
  text-align: center;
  color: springgreen;
}
.project p {
  color: #B8B8B8;
  font-size: 18px;
  letter-spacing: 0.8px;
  line-height: 1.5em;
  margin: 14px auto 30px auto;
  text-align: center;
  width: 56%;
}
.project .nav.nav-pills {
  width: 72%;
  margin: 0 auto;
  border-radius: 50px;
  background-color: rgb(255 255 255 / 10%);
  overflow: hidden;
}
.project .nav.nav-pills .nav-item {
  width: 33.33333%;
}
.project .nav.nav-pills .nav-link {
  background-color: transparent;
  border-radius: 0;
  padding: 17px 0;
  color: cyan;
  width: 100%;
  font-size: 17px;
  letter-spacing: 0.8px;
  font-weight: 500;
  position: relative;
  transition: 0.3s ease-in-out;
  text-align: center;
  z-index: 0;
}
.project .nav.nav-pills .nav-link::before {
  content: "";
  position: absolute;
  width: 0;
  height: 100%;
  background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
  top: 0;
  left: 0;
  z-index: -1;
  transition: 0.3s ease-in-out;
}
@media (max-width: 600px) {
  .project .nav.nav-pills .nav-link::before {
    position: absolute;
    left: 0;
    top: -13px;
    height: 150%;
  }
  .nav-link#projects-tabs-tab-second {
    height: 86px;
    padding: 30px 0;
    border-top: 1px solid rgba(255, 255, 255, 0.5);
    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
  }
  .nav-link#projects-tabs-tab-third {
    height: 86px;
    padding: 30px 0;
    border: 1px solid rgba(255, 255, 255, 0.5);
    border-radius: 0 55px 55px 0;
  }
  .project .nav.nav-pills .nav-link {
    text-align: center;
    
  }
}
.project .nav.nav-pills .nav-link.active::before {
    width: 100% !important;
}
.project .nav.nav-pills .nav-link.active {
    border: 1px solid rgba(255, 255, 255, 1);
    color: #fff;
}
.nav-link#projects-tabs-tab-first {
  border: 1px solid rgba(255, 255, 255, 0.5);
  border-radius: 55px 0px 0px 55px;
}
.nav-link#projects-tabs-tab-second {
  border-top: 1px solid rgba(255, 255, 255, 0.5);
  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
}
.nav-link#projects-tabs-tab-third {
  border: 1px solid rgba(255, 255, 255, 0.5);
  border-radius: 0 55px 55px 0;
}
.proj-imgbx {
  position: relative;
  border-radius: 30px;
  overflow: hidden;
  margin-bottom: 24px;
  width: 100%;
}
.proj-imgbx::before {
  content: "";
  background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
  opacity: 0.85;
  position: absolute;
  width: 100%;
  height: 0;
  transition: 0.4s ease-in-out;
}
.proj-imgbx:hover::before {
  height: 100%;
}

.proj-txtx {
  position: absolute;
  text-align: center;
  top: 65%;
  left: 50%;
  transform: translate(-50%, -50%);
  transition: 0.5s ease-in-out;
  opacity: 0;
  width: 100%;
}
.proj-imgbx:hover .proj-txtx {
  top: 50%;
  opacity: 1;
}
.proj-txtx h4 {
  font-size: 30px;
  font-weight: 700;
  letter-spacing: 0.8px;
  line-height: 1.1em;
  color: gold;
}
.proj-txtx span {
  font-style: italic;
  font-weight: 400;
  font-size: 15px;
  letter-spacing: 0.8px;
}
.background-image-right {
  top: 20%;
  position: absolute;
  bottom: 0;
  width: 35%;
  right: 0;
  z-index: -4;
}
#proj-url {
  text-decoration: none;
  color: #fff;
}
.disablelink {
  pointer-events: none;
}

/************ Studies Styling ************/
.studies h2 {
	font-size: 45px;
	font-weight: 700;
  text-align: center;
  color: #fff;
  margin-bottom: 1em;
}
.study h4 {
  font-size: 35px;
  font-weight: 700;
  letter-spacing: 0.8px;
  line-height: 1.1em;
  color: springgreen;
  margin-bottom: 1rem;
  background: linear-gradient(90.21deg, #aa367c70 -5.91%, #492fbd7b 90.58%);
  border-radius: 15px;
  padding-top: 0.5em;
  padding-bottom: 0.5em;
  text-align: center;
}
.study h4 .programme {
  font-size: 30px;
  color: #fff
}
.study h5 {
  font-size: 25px;
  font-weight: 600;
  color: cyan;
}

.study {
  margin-bottom: 3rem;
  transition: transform .5s;
}
@media (min-width:600px) {
  .study:hover {
    transform: scale(1.1);
  }
  .study:hover > h4 {
    background: linear-gradient(90.21deg, #aa367ccb -5.91%, #492fbdd0 90.58%);
  }
}
.studies {
  background-color: #12121200;
}
.background-image-L-studies {
  top: 65%;
  position: absolute;
  bottom: 0;
  width: 40%;
  z-index: -4;
  left: 0;
}
.study p {
  font-size: 20px;
  font-weight: 600;
}

.scale_animation {
  animation: scale_up_down 0.5s ease-in-out;
}

@keyframes scale_up_down {
  0% {scale: 1;}
  50% {scale: 1.1;}
  0% {scale: 1;}
}

/************ Work Styling ************/
.work {
  padding: 0;
  margin: 0;
}
.work .container {
  padding: 0;
  margin: 0;
}
.work-container {
  border-radius: 64px;
  text-align: center;
  padding: 60px 50px;
  margin-top: -60px;
  width: 100vw;
}
.work h2 {
	font-size: 45px;
	font-weight: 700;
  text-align: center;
  color: cyan;
  margin-bottom: 1em;
}
.work p {
  color: #B8B888;
  font-size: 20px;
  letter-spacing: 0.8px;
  line-height: 1.5em;
  margin: 14px 0 75px 0;
}
.works-slider {
  width: 100%;
  margin: 0 auto;
  position: relative;
}
/* .works-slider .item {
  padding: 5px;
  margin: 10px;
  background: #151515df;
  border-radius: 1em;
  height: 500px;
} */

.img-container {
  height: 270px;
}
.works-slider .item img {
  width: 90%;
  margin: 0 auto 15px auto;
}
@media (max-width: 1024px) {
  .works-slider .item {
    height: 400px;
  }
  .img-container {
    height: 180px;
  }
}
/* ... */

